# SkyPro_Homework

./: .env.example  .gitignore  README.md  csv_xlsx_reader.py  decorators.py  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  external_api.py  generators.py  main.py  mylog.txt  pyproject.toml  utils.py
data/: transactions.csv  transactions_excel.xlsx
src/: count_of_category.py  filter_trans.py  masks.py  processing.py  widget.py
tests/: conftest.py  test_csv_xlsx_reader.py  test_decorators.py  test_external_api.py  test_generator.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
