[tool.poetry]
name = "skyprohomeworkpoetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
pytest = "^8.3.5"
dotenv = "^0.9.9"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"


[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.15.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest-cov = "^6.0.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''


[tool.isort]
# максимальная длина строки
line_length = 119


[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

